# airboard-server

./: Cargo.toml  airboard.service
packaging/: PKGBUILD
src/: lib.rs  main.rs
