[package]
name = "airboard-server"
version = "0.2.1"
authors = ["Curtis Maves <curtis@maves.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustable = "0.2.2"
# rustable = { path = "/home/cmaves/rustable" }
sha2 = "0.9.2"
clap = "2.33.3"
serde = { version = "1.0.123", features = ["derive"] }
serde_yaml = "0.8.17"
# wl-clipboard-rs = "0.4.1"

[profile.release]
lto = "thin"
